force-app/main/default/objects/Campaign/fields/Activity_type__c.field-meta.xml
<CustomField>
    <fullName>Activity_type__c</fullName>
    <inlineHelpText>Type of fundraising activity  i.e. bake sale</inlineHelpText>
    <label>Activity type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>