force-app/main/default/objects/Campaign/fields/Asset_link_SharePoint_folder__c.field-meta.xml
<CustomField>
    <fullName>Asset_link_SharePoint_folder__c</fullName>
    <label>Asset link (SharePoint folder)</label>
    <type>Url</type>
</CustomField>