force-app/main/default/objects/Campaign/fields/Campaign_feedback__c.field-meta.xml
<CustomField>
    <fullName>Campaign_feedback__c</fullName>
    <description>Feedback or notes related to the campaign&apos;s performance or effectiveness</description>
    <inlineHelpText>Feedback or notes related to the campaign&apos;s performance or effectiveness</inlineHelpText>
    <label>Campaign Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>