force-app/main/default/objects/Campaign/fields/Clothing_type__c.field-meta.xml
<CustomField>
    <fullName>Clothing_type__c</fullName>
    <label>Clothing type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vest</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>