force-app/main/default/objects/Campaign/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <inlineHelpText>Expected distance to cover by Running/Cycling/walking etc values in kilometres or miles</inlineHelpText>
    <label>Distance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>