force-app/main/default/objects/Campaign/fields/Event_completed__c.field-meta.xml
<CustomField>
    <fullName>Event_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Completed</label>
    <type>Checkbox</type>
</CustomField>