force-app/main/default/objects/Campaign/fields/Event_date__c.field-meta.xml
<CustomField>
    <fullName>Event_date__c</fullName>
    <label>Event date</label>
    <type>Date</type>
</CustomField>