force-app/main/default/objects/Campaign/fields/Fundraising_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Page_URL__c</fullName>
    <label>Fundraising Page URL</label>
    <type>Url</type>
</CustomField>