force-app/main/default/objects/Campaign/fields/Fundraising_Page_Value__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Page_Value__c</fullName>
    <label>Fundraising Page Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>