force-app/main/default/objects/Campaign/fields/Fundraising_paid__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraising paid</label>
    <type>Checkbox</type>
</CustomField>