force-app/main/default/objects/Campaign/fields/Fundraising_target__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_target__c</fullName>
    <label>Fundraising target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>