force-app/main/default/objects/Campaign/fields/Giving_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Giving_Page_URL__c</fullName>
    <label>Giving Page URL</label>
    <type>Url</type>
</CustomField>