force-app/main/default/objects/Campaign/fields/md_npc_pack__Fundraising_Account__c.field-meta.xml
<CustomField>
    <fullName>md_npc_pack__Fundraising_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>FundraisingCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>