force-app/main/default/objects/Campaign/fields/movedata__Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>movedata__Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>