force-app/main/default/objects/Campaign/fields/movedata__Platform__c.field-meta.xml
<CustomField>
    <fullName>movedata__Platform__c</fullName>
    <description>Contains the Platform linked to this Campaign using MoveData.</description>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>