force-app/main/default/objects/Campaign/fields/movedata__Protect_Campaign_Parent__c.field-meta.xml
<CustomField>
    <fullName>movedata__Protect_Campaign_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protect Campaign Parent</label>
    <type>Checkbox</type>
</CustomField>