force-app/main/default/objects/Campaign/fields/movedata__Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>movedata__Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protect Name</label>
    <type>Checkbox</type>
</CustomField>