force-app/main/default/objects/Campaign/fields/Outreach_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Source_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Code</label>
    <referenceTo>OutreachSourceCode</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>