force-app/main/default/objects/Campaign/fields/Pcode__c.field-meta.xml
<CustomField>
    <fullName>Pcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pcode</label>
    <referenceTo>Finance_Codes__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>