force-app/main/default/objects/Campaign/fields/Proactive_reactive__c.field-meta.xml
<CustomField>
    <fullName>Proactive_reactive__c</fullName>
    <label>Proactive/reactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>