force-app/main/default/objects/Campaign/fields/Registration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Registration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Complete</label>
    <type>Checkbox</type>
</CustomField>