force-app/main/default/objects/Campaign/fields/Sign_up_date__c.field-meta.xml
<CustomField>
    <fullName>Sign_up_date__c</fullName>
    <label>Sign up date</label>
    <type>Date</type>
</CustomField>