force-app/main/default/objects/Campaign/fields/sj_UI_Campaign__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_Campaign__c</fullName>
    <externalId>true</externalId>
    <label>sj_UI_Campaign__c</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>