force-app/main/default/objects/Campaign/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Baking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>