force-app/main/default/objects/Campaign/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Giving</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Trusts and Grants</fullName>
            </value>
            <value>
                <fullName>Adrenaline</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Auctions</fullName>
            </value>
            <value>
                <fullName>Receptions</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>