force-app/main/default/objects/Campaign/fields/t_shirt_size__c.field-meta.xml
<CustomField>
    <fullName>t_shirt_size__c</fullName>
    <label>t-shirt size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X Large</fullName>
            </value>
            <value>
                <fullName>XX Large</fullName>
            </value>
            <value>
                <fullName>XXX Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>