force-app/main/default/objects/Campaign/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>