force-app/main/default/objects/Campaign/fields/Welcome_Pack_Selected__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Pack_Selected__c</fullName>
    <description>Selected [Digital/Postal]</description>
    <label>Welcome Pack Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Postal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>